--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Your Name",
   "license": "MIT",
   "private": false,
-  "homepage": "https://yourusername.github.io/memory-personality-engine",
+  "homepage": ".",
   "repository": {
     "type": "git",
     "url": "https://github.com/yourusername/memory-personality-engine.git"
@@ -19,15 +19,19 @@
     "react"
   ],
   "dependencies": {
+    "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "lucide-react": "^0.263.1"
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "gh-pages": "^6.0.0"
+    "autoprefixer": "^10.4.16",
+    "gh-pages": "^6.0.0",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
